//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Akiva Cascade" {
  database_type: 'PostgreSQL'
  Note: 'Digital Mass Document Approval and Review System'
}

Table users {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String
  lastName String
  name String [not null]
  email String [unique, not null]
  emailVerified Boolean
  image String
  status UserStatus [not null, default: 'UNASSIGNED']
  sessions sessions [not null]
  accounts accounts [not null]
  roleAssignments UserRoleAssignment [not null]
  businessUnits UserBusinessUnit [not null]
  notifications Notification [not null]
  headedBusinessUnit BusinessUnit
  initiatedRequisitions Requisition [not null]
  assignedApprovals RequisitionApproval [not null]
  comments Comment [not null]
  uploadedAttachments Attachment [not null]
  createdTags Tag [not null]
  taggedRequisitions RequisitionTag [not null]
  chats ChatParticipant [not null]
  sentChatMessages ChatMessage [not null]
  createdGroupChats Chat [not null]
}

Table sessions {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiresAt DateTime [not null]
  token String [unique, not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user users [not null]
}

Table accounts {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accountId String [not null]
  providerId String [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  userId String [not null]
  user users [not null]
}

Table verifications {
  id String [pk]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  identifier String [not null]
  value String [not null]
  expiresAt DateTime [not null]
}

Table BusinessUnit {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  headId String [unique, not null]
  head users [not null]
  members UserBusinessUnit [not null]
  roles Role [not null]
  requisitionTemplates RequisitionTemplate [not null]
  requisitions Requisition [not null]
}

Table UserBusinessUnit {
  userId String [not null]
  businessUnitId String [not null]
  membershipType BUMembershipType [not null, default: 'MEMBER']
  user users [not null]
  businessUnit BusinessUnit [not null]

  indexes {
    (userId, businessUnitId) [pk]
  }
}

Table Role {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  scope RoleScope [not null, default: 'BU']
  isBUAdmin Boolean [not null, default: false]
  businessUnitId String
  businessUnit BusinessUnit
  userAssignments UserRoleAssignment [not null]
  accessibleTemplates TemplateInitiatorAccess [not null]
  approvalStepDefinitions ApprovalStepDefinition [not null]

  indexes {
    (name, businessUnitId) [unique]
  }
}

Table UserRoleAssignment {
  userId String [not null]
  roleId String [not null]
  assignedAt DateTime [default: `now()`, not null]
  user users [not null]
  role Role [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table RequisitionTemplate {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  businessUnitId String [not null]
  businessUnit BusinessUnit [not null]
  fields TemplateField [not null]
  initiatorAccess TemplateInitiatorAccess [not null]
  approvalWorkflowId String
  approvalWorkflow ApprovalWorkflow
  requisitions Requisition [not null]

  indexes {
    (name, businessUnitId) [unique]
  }
}

Table TemplateField {
  id String [pk]
  templateId String [not null]
  template RequisitionTemplate [not null]
  label String [not null]
  fieldType FieldType [not null]
  isRequired Boolean [not null, default: true]
  placeholder String
  order Int [not null]
  options FieldOption [not null]
  listColumns TemplateField [not null]
  parentListFieldId String
  parentListField TemplateField
  submittedValues RequisitionValue [not null]

  indexes {
    (templateId, label, parentListFieldId) [unique]
  }
}

Table FieldOption {
  id String [pk]
  fieldId String [not null]
  field TemplateField [not null]
  label String [not null]
  value String [not null]
  order Int [not null]

  indexes {
    (fieldId, value) [unique]
  }
}

Table TemplateInitiatorAccess {
  templateId String [not null]
  roleId String [not null]
  template RequisitionTemplate [not null]
  role Role [not null]

  indexes {
    (templateId, roleId) [pk]
  }
}

Table ApprovalWorkflow {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  steps ApprovalStepDefinition [not null]
  templates RequisitionTemplate [not null]
}

Table ApprovalStepDefinition {
  id String [pk]
  workflowId String [not null]
  workflow ApprovalWorkflow [not null]
  stepNumber Int [not null]
  approverRoleId String [not null]
  approverRole Role [not null]
  requisitionApprovals RequisitionApproval [not null]

  indexes {
    (workflowId, stepNumber) [unique]
  }
}

Table Requisition {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  initiatorId String [not null]
  initiator users [not null]
  businessUnitId String [not null]
  fromBU BusinessUnit [not null]
  templateId String [not null]
  template RequisitionTemplate [not null]
  overallStatus RequisitionStatus [not null, default: 'PENDING']
  approvalHistory RequisitionApproval [not null]
  submittedValues RequisitionValue [not null]
  attachments Attachment [not null]
  actionLog Comment [not null]
  notifications Notification [not null]
  tags RequisitionTag [not null]
}

Table RequisitionApproval {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  requisitionId String [not null]
  requisition Requisition [not null]
  stepDefinitionId String [not null]
  stepDefinition ApprovalStepDefinition [not null]
  approverId String
  approver users
  status ApprovalStatus [not null, default: 'WAITING']
  actionedAt DateTime
}

Table RequisitionValue {
  id String [pk]
  requisitionId String [not null]
  requisition Requisition [not null]
  templateFieldId String [not null]
  templateField TemplateField [not null]
  value String [not null]
  rowIndex Int

  indexes {
    (requisitionId, templateFieldId, rowIndex) [unique]
  }
}

Table Attachment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  url String [not null]
  filename String [not null]
  filetype String [not null]
  size Int
  uploaderId String [not null]
  uploader users [not null]
  requisitionId String
  requisition Requisition
  commentId String
  comment Comment
  chatMessageId String
  chatMessage ChatMessage
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  content String [not null]
  action ActionType [not null]
  authorId String [not null]
  author users [not null]
  requisitionId String [not null]
  requisition Requisition [not null]
  attachments Attachment [not null]
}

Table Notification {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  message String [not null]
  isRead Boolean [not null, default: false]
  recipientId String [not null]
  recipient users [not null]
  requisitionId String
  requisition Requisition
}

Table Tag {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  label String [unique, not null]
  color String [not null, default: '#cccccc']
  creatorId String [not null]
  creator users [not null]
  requisitions RequisitionTag [not null]
}

Table RequisitionTag {
  requisitionId String [not null]
  tagId String [not null]
  requisition Requisition [not null]
  tag Tag [not null]
  assignedBy users [not null]
  assignedById String [not null]
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (requisitionId, tagId) [pk]
  }
}

Table Chat {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  chatType ChatType [not null]
  groupName String
  groupImageUrl String
  creatorId String
  creator users
  participants ChatParticipant [not null]
  messages ChatMessage [not null]
}

Table ChatParticipant {
  chatId String [not null]
  userId String [not null]
  chat Chat [not null]
  user users [not null]
  lastReadAt DateTime

  indexes {
    (chatId, userId) [pk]
  }
}

Table ChatMessage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  content String
  senderId String [not null]
  sender users [not null]
  chatId String [not null]
  chat Chat [not null]
  attachments Attachment [not null]
}

Enum UserStatus {
  UNASSIGNED
  ACTIVE
  DISABLED
}

Enum BUMembershipType {
  MEMBER
  AUDITOR
}

Enum RoleScope {
  BU
  SYSTEM
  AUDITOR
}

Enum FieldType {
  TEXT
  TEXT_AREA
  NUMBER
  BOOLEAN
  DATE
  CURRENCY
  SELECT
  MULTIPLE_CHOICE
  CHECKBOX
  LIST
}

Enum RequisitionStatus {
  DRAFT
  PENDING
  NEEDS_CLARIFICATION
  IN_REVISION
  APPROVED
  CANCELED
}

Enum ApprovalStatus {
  WAITING
  PENDING
  APPROVED
  REQUESTED_CLARIFICATION
  REQUESTED_REVISION
}

Enum ActionType {
  SUBMIT
  APPROVE
  REQUEST_REVISION
  REQUEST_CLARIFICATION
  CLARIFY
  RESUBMIT
  COMMENT
  CANCEL
}

Enum ChatType {
  PRIVATE
  GROUP
}

Ref: sessions.userId > users.id [delete: Cascade]

Ref: accounts.userId > users.id [delete: Cascade]

Ref: BusinessUnit.headId - users.id

Ref: UserBusinessUnit.userId > users.id [delete: Cascade]

Ref: UserBusinessUnit.businessUnitId > BusinessUnit.id [delete: Cascade]

Ref: Role.businessUnitId > BusinessUnit.id

Ref: UserRoleAssignment.userId > users.id [delete: Cascade]

Ref: UserRoleAssignment.roleId > Role.id [delete: Cascade]

Ref: RequisitionTemplate.businessUnitId > BusinessUnit.id

Ref: RequisitionTemplate.approvalWorkflowId > ApprovalWorkflow.id

Ref: TemplateField.templateId > RequisitionTemplate.id [delete: Cascade]

Ref: TemplateField.parentListFieldId > TemplateField.id

Ref: FieldOption.fieldId > TemplateField.id [delete: Cascade]

Ref: TemplateInitiatorAccess.templateId > RequisitionTemplate.id [delete: Cascade]

Ref: TemplateInitiatorAccess.roleId > Role.id [delete: Cascade]

Ref: ApprovalStepDefinition.workflowId > ApprovalWorkflow.id [delete: Cascade]

Ref: ApprovalStepDefinition.approverRoleId > Role.id

Ref: Requisition.initiatorId > users.id

Ref: Requisition.businessUnitId > BusinessUnit.id

Ref: Requisition.templateId > RequisitionTemplate.id

Ref: RequisitionApproval.requisitionId > Requisition.id [delete: Cascade]

Ref: RequisitionApproval.stepDefinitionId > ApprovalStepDefinition.id

Ref: RequisitionApproval.approverId > users.id

Ref: RequisitionValue.requisitionId > Requisition.id [delete: Cascade]

Ref: RequisitionValue.templateFieldId > TemplateField.id

Ref: Attachment.uploaderId > users.id

Ref: Attachment.requisitionId > Requisition.id [delete: Cascade]

Ref: Attachment.commentId > Comment.id [delete: Cascade]

Ref: Attachment.chatMessageId > ChatMessage.id [delete: Cascade]

Ref: Comment.authorId > users.id

Ref: Comment.requisitionId > Requisition.id [delete: Cascade]

Ref: Notification.recipientId > users.id [delete: Cascade]

Ref: Notification.requisitionId > Requisition.id [delete: Cascade]

Ref: Tag.creatorId > users.id

Ref: RequisitionTag.requisitionId > Requisition.id [delete: Cascade]

Ref: RequisitionTag.tagId > Tag.id [delete: Cascade]

Ref: RequisitionTag.assignedById > users.id

Ref: Chat.creatorId > users.id

Ref: ChatParticipant.chatId > Chat.id [delete: Cascade]

Ref: ChatParticipant.userId > users.id [delete: Cascade]

Ref: ChatMessage.senderId > users.id

Ref: ChatMessage.chatId > Chat.id [delete: Cascade]